--- a/404.html
+++ b/404.html
@@ -80,7 +80,7 @@
         <p>Кажется, мы не можем найти то, что вы ищете.</p>
         <p>Возможно, страница была перемещена или больше не существует.</p>
         
-        <a href="index.html" class="home-button">Вернуться на главную</a>
+        <a href="/" class="home-button">Вернуться на главную</a>
         
         <div class="error-details">
             <p>Если вы считаете, что это ошибка, свяжитесь с Гошей:</p>
